logs/watchdog_20251011_1730.log
[11/10/2025 17:30:01,71] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[11/10/2025 17:30:02,07] END WATCHDOG 
